# CREN

./: CMakeLists.txt  README.md  scene_template.txt
data/cfg/: u1i.conf  ui.conf  ui.xml  ui_1.xml
data/db/: items.xml  items_properties.xml  ui.xml
data/maps/: exam.map
include/: UI.hpp  cren.hpp  game.hpp  global.hpp  gut.hpp  items.hpp  math.hpp  res.hpp  s_UI.hpp  s_exit.hpp  s_gameplay.hpp  s_mainmenu.hpp  s_pause.hpp  s_temp.hpp  util.hpp
src/: UI (copy).cpp  UI.cpp  cren.cpp  game.cpp  global.cpp  gut.cpp  items.cpp  main.cpp  math.cpp  res.cpp  s_UI.cpp  s_exit.cpp  s_gameplay.cpp  s_mainmenu.cpp  s_pause.cpp  s_temp.cpp  util.cpp
